Scaffolding Updated build #11

--- a/config/scaffolding/SIQA_512AZStageProject.yml
+++ b/config/scaffolding/SIQA_512AZStageProject.yml
@@ -12,3 +12,8 @@ packages:
   gitUrl: https://github.com/prabhakarsag
   gitUsername: prabhakarsag
   gitBranch: main
+- name: PackY
+  gitServerName: SIQAPsurGit
+  gitUrl: https://github.com/prabhakarsag
+  gitUsername: prabhakarsag
+  gitBranch: main
